[package]
name = "drogue-bsec"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

license = "UNLICENSED"
description = "An interface for the BSEC library"
repository = "https://github.com/drogue-iot/drogue-bsec"
homepage = "https://blog.drogue.io"
categories = ["embedded", "no-std"]
keywords = ["bosch", "bme680", "bsec", "sensor"]
readme = "README.md"

[dependencies]

cty = "0.2"
libm = "0.2"

log = "0.4"

embedded-time = "0.10"

drogue-bme680 = "0.3.0"

[features]
dump = []
stm32f4xx = []
display = []

[dev-dependencies]

rtt-target = { version = "0.2.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-logger = { version = "0.1" }

cortex-m = { version = "0.6" }
cortex-m-rt = { version = "0.6" }
cortex-m-rtic = "0.5"

stm32f4 = { version = "0.11", features = ["stm32f411", "rt"] }
stm32f4xx-hal = { version = "0.8", features = ["stm32f411", "rt"] }

drogue-embedded-timer = "0.2"
embedded-hal = "0.2"
heapless = "0.5"

embedded-graphics = { version = "0.6" }
ssd1351 = { version = "0.3", features = ["graphics", "buffered"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[build-dependencies]
bindgen = "0.55.1"

[patch.crates-io]
ssd1351 = { git = "https://github.com/ctron/ssd1351.git", branch = "feature/update_deps_1" }
drogue-bme680 = { path = "../drogue-bme680" }